configuro el estilo de letra d

--- a/LetraD.html
+++ b/LetraD.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{background-color: #138d75;}
+        header
+        {
+            background-color: white;
+            width: 75%;
+            margin: 0 auto;
+            padding: 12px;
+            border-radius: 8px;
+        }
+    </style>
 </head>
 <body>
-    <p></p>
+    <header>
+        <h1>Letra D</h1>
+    </header>
+    <section>
+
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
