Cambios: 1. Sigo creando letra d. 2. Enlace a letra d.

--- a/LetraD.html
+++ b/LetraD.html
@@ -13,6 +13,20 @@
             margin: 0 auto;
             padding: 12px;
             border-radius: 8px;
+            text-align: center;
+        }
+        div
+        {
+            display: flex;
+            align-items: center;
+            margin: 0 auto;
+            width: 90%;
+            justify-content:space-between;
+        }
+        .texto
+        {
+            display: flex;
+            flex-direction: column;
         }
     </style>
 </head>
@@ -20,11 +34,29 @@
     <header>
         <h1>Letra D</h1>
     </header>
+    <br>
+    <section>
+        <div>
+            <p.texto>
+                <strong>
+                    Introducción:
+                </strong>
+            </p>
+            <p.texto>
+                En esta página encontraremos las palabras más comunes para la letra D.
+            </p>
+        </div>
+    </section>
+    <br>
+    
     <section>
 
     </section>
-    <footer>
 
+    <footer>
+        <div style="text-align: center;">
+            <a href="HOME.html">REGRESAR</a>
+        </div>
     </footer>
 </body>
 </html>
