--- a/HOME.html
+++ b/HOME.html
@@ -30,7 +30,7 @@
                 <td>A</td>
                 <td>B</td>
                 <td>C</td>
-                <td>D</td>
+                <td><a href="LetraD.html">D</a></td>
                 <td>E</td>
                 <td>F</td>
                 <td>G</td>
