--- a/HOME.html
+++ b/HOME.html
@@ -31,10 +31,10 @@
                 <td>B</td>
                 <td>C</td>
                 <td><a href="LetraD.html">D</a></td>
-                <td>E</td>
+                <td><a href="LetraE.html">E</a></td>
                 <td>F</td>
                 <td>G</td>
-                <td>H</td>
+                <td><a href="LetraH.html">H</a></td>
                 <td>I</td>
             </tr>
             <tr>
