Letra h: Cambiando a tono claro de letras.

--- a/LetraH.html
+++ b/LetraH.html
@@ -26,6 +26,7 @@
         
         .texto
         {
+            color: white;
             display: flex;
             flex-direction: column;
         }
@@ -55,7 +56,7 @@
     </header>
     <br>
     <section>
-        <div>
+        <div style="color: white;">
             <p.texto>
                 <strong>
                     Introducción:
@@ -70,7 +71,7 @@
     
     <section>
         <div>
-            <table>
+            <table style="color: white;">
                 <tr>
                     <td>
                         Hereje: Persona que niega alguno de los dogmas establecidos en una religión.
