letras d,e,h, enlaces en otro color

--- a/LetraD.html
+++ b/LetraD.html
@@ -38,7 +38,8 @@
         {
             text-decoration: none;
             text-align: center;
-            
+            font-style: bold;
+            color: aqua;
         }
         ol
         {
@@ -52,7 +53,7 @@
             width: 150px;
             border-radius: 50%;
             border-width: 3px;
-            border-color: black;
+            border-style: solid;
         }
     </style>
 </head>
