--- a/LetraE.html
+++ b/LetraE.html
@@ -34,7 +34,8 @@
         {
             text-decoration: none;
             text-align: center;
-            
+            font-style: bold;
+            color: aqua;
         }
         ol
         {   
@@ -48,6 +49,8 @@
             height: 150px;
             width: 150px;
             border-radius: 50%;
+            border-width: 3px;
+            border-style: solid;
         }
     </style>
 </head>
