--- a/LetraH.html
+++ b/LetraH.html
@@ -50,6 +50,7 @@
             border-radius: 50%;
             border-width: 3px;
             border-style: solid;
+            border-color: black;
         }
     </style>
 </head>
