--- a/LetraD.html
+++ b/LetraD.html
@@ -10,6 +10,7 @@
         {
             border-collapse: collapse;
             width: 100%;
+            font-family: 'Times New Roman', Times, serif;
         }
         header
         {
@@ -29,17 +30,19 @@
             justify-content:space-between;
         }
         
-        .texto
+        p
         {
             display: flex;
             flex-direction: column;
+            font-family: 'Times New Roman', Times, serif;
         }
         a
-        {
-            text-decoration: none;
+        {   
             text-align: center;
+            text-decoration: none;
             font-style: bold;
             color: aqua;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         ol
         {
