--- a/LetraE.html
+++ b/LetraE.html
@@ -6,6 +6,12 @@
     <title>Letra E</title>
     <style>
         body{background-color: #1e8449;}
+        table
+        {
+            border-collapse: collapse;
+            width: 100%;
+            font-family:Arial, Helvetica, sans-serif;
+        }
         header
         {
             background-color: white;
@@ -24,11 +30,12 @@
             justify-content:space-between;
         }
         
-        .texto
+        p
         {
             color: white;
             display: flex;
             flex-direction: column;
+            font-family: Arial, Helvetica, sans-serif;
         }
         a
         {
@@ -36,6 +43,7 @@
             text-align: center;
             font-style: bold;
             color: aqua;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         ol
         {   
