cambio de fuente a parrafos con body

--- a/LetraE.html
+++ b/LetraE.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letra E</title>
     <style>
-        body{background-color: #1e8449;}
+        body
+        {
+            background-color: #1e8449;
+            font-family: Arial, Helvetica, sans-serif;
+        }
         table
         {
             border-collapse: collapse;
