--- a/LetraH.html
+++ b/LetraH.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letra H</title>
     <style>
-        body{background-color: #212f3d;}
+        body
+        {   
+            background-color: #212f3d;
+            font-family: 'Comic Sans MS',cursive,sans-serif;
+        }
         table
         {
             border-collapse: collapse;
