--- a/LetraD.html
+++ b/LetraD.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letra D</title>
     <style>
-        body{background-color: #138d75;}
+        body
+        {
+            background-color: #138d75;
+            font-family: 'Times New Roman', Times, serif;
+        }
         table
         {
             border-collapse: collapse;
