cambio de color a enlaces en d,e,h

--- a/LetraH.html
+++ b/LetraH.html
@@ -51,7 +51,7 @@
             text-decoration: none;
             text-align: center;
             font-style: bold;
-            color: aqua;
+            color: darkblue;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
         }
         ol
