--- a/LetraD.html
+++ b/LetraD.html
@@ -47,7 +47,7 @@
             text-align: center;
             text-decoration: none;
             font-style: bold;
-            color: black;
+            color: darkblue;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         ol
