--- a/LetraE.html
+++ b/LetraE.html
@@ -48,7 +48,7 @@
             text-decoration: none;
             text-align: center;
             font-style: bold;
-            color: black;
+            color: darkblue;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         ol
