--- a/LetraA.html
+++ b/LetraA.html
@@ -42,7 +42,7 @@
                     ABACATE: um fruto verde e cremoso, rico em gordura saudável, muito utilizado na culinária.
                 </td>
                 <td>
-                    <img src="/public/imgAbacate.png " class="imgBedRock">
+                    <img src=/public/imgAbacate.png " class="imgBedRock">
                 </td>
             </tr>
             <tr>
